# telemcp

./: .gitignore  Makefile  README.md  auth.py  config.example.json  config.py  pyproject.toml  requirements.txt  server.py  session.py  telemcp.bat  telemcp.sh  test_connection.py  tg.py  tools.py  whitelist.py
src/telemcp/: __init__.py  __main__.py  auth.py  cli.py  config.py  server.py  session.py  test_connection.py  tg.py
tests/: test_config.py  test_session.py  test_tg.py  test_whitelist.py
